# fsm

./: .gitignore  README.md  fsm.c  fsm.h
doc/: example_state_diagram.drawio
examples/esp_example/: example.c  example.h
test/: CMakeLists.txt
test/src/: fsm_events_states.h  fsm_test.c  fsm_test.h
